# nodejs-server/service/AuthenticationService.js
@@ -11,11 +11,24 @@
  * code String  (optional)
  * client_id Integer  (optional)
  * redirect_uri String  (optional)
- * no response value expected for this operation
+ * returns EASObject
  **/
 exports.oauth2TokenPOST = function(grant_type,refresh_token,access_type,code,client_id,redirect_uri) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    var examples = {};
+    examples['application/json'] = {
+  "access_token" : "access_token",
+  "refresh_token_expires_in" : 6,
+  "refresh_token" : "refresh_token",
+  "scope" : "scope",
+  "token_type" : "token_type",
+  "expires_in" : 0
+};
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
   });
 }
 
